<resources>
    <string name="app_name">Uber Navideño</string>
    <string name="id_pasajero">Cliente</string>
    <string name="id_conductor">Repartidor</string>
    <string name="txt_cedula">Cédula</string>
    <string name="txt_Nombre">Nombre</string>
    <string name="txt_Apellido">Apellido</string>
    <string name="txt_correo">Correo Electronico</string>
    <string name="txt_telefono">Numero de Telefono</string>
    <string name="txt_password">Password</string>
    <string name="txt_verificar">Verificar Password</string>
    <string name="txt_formulario">Registro Cliente</string>
    <string name="txt_numeroTarjeta">Número de Tarjeta</string>
    <string name="txt_fechaEx">Fecha de Expiracion</string>
    <string name="txt_codigoSeg">Codigo de Seguridad </string>
    <string name="button_aceptar"> Aceptar </string>
    <string name="button">Siguiente</string>
    <string name="action_settings">Settings</string>



    <string name="menu_home">Tus viajes</string>
    <string name="menu_gallery">Pago</string>
    <string name="menu_slideshow">Ayuda</string>
    <string name="menu_tools">Viajes gratis</string>
    <string name="menu_share">Configuración</string>
    <string name="menu_send">Send</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_menu_bar">MenuBar</string>
    <string name="registro_de_repartidor">Registro de Repartidor</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="numero_de_cedula">Número de Cédula:</string>
    <string name="fecha_de_nacimiento_aaaa_mm_dd">Fecha de Nacimiento: aaaa-mm-dd</string>
    <string name="direccion">Dirección:</string>
    <string name="e_mail">e-mail:</string>
    <string name="password">Password:</string>
    <string name="repetir_password">Repetir Password:</string>
    <string name="siguiente">Siguiente</string>
</resources>
